--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   another_flushbar: ^1.12.30
   table_calendar: ^3.1.2
+  animations: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
