--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,7 @@
 name: alquran_app
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
 version: 1.0.0+1
 
 environment:
@@ -17,12 +14,11 @@ dependencies:
   http: ^1.2.2
   provider: ^6.1.2
   intl: ^0.19.0
-  flutter_compass: any  # Gunakan "any" jika tidak ada versi spesifik
   animated_text_kit: ^4.2.1 
   shared_preferences: ^2.0.13
   image_picker: ^0.8.4+4
   get: ^4.6.6
-  audioplayers: any  # Gunakan "any" jika tidak ada versi spesifik
+  audioplayers: any
   cached_network_image: ^3.4.1
   permission_handler: ^11.3.1
   flutter_launcher_icons: ^0.9.2
@@ -30,6 +26,13 @@ dependencies:
   table_calendar: ^3.1.2
   animations: ^2.0.0
   flutter_qiblah: ^3.0.4
+  geolocator: ^13.0.2
+  flutter_dotenv: ^5.2.1
+  flutter_secure_storage:
+  webview_flutter: ^4.10.0
+  webview_flutter_android: ^4.1.0
+  webview_flutter_wkwebview: ^3.16.2
+  # flutter_compass: '^0.8.1'
 
 
 dev_dependencies:
@@ -41,29 +44,32 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/kereem.png
-    - /Users/rizkicahya/alquran_app/assets/images/Alhamdulillah.png
-    - /Users/rizkicahya/alquran_app/assets/images/Allahuakbar.png
-    - /Users/rizkicahya/alquran_app/assets/images/Subhanallah.png
-    - /Users/rizkicahya/alquran_app/assets/images/Lailahaillallah.png
-    - /Users/rizkicahya/alquran_app/assets/images/masjid-2.png
-    - /Users/rizkicahya/alquran_app/assets/images/background.png
-    - /Users/rizkicahya/alquran_app/assets/logo/kereem-1.png
-    - /Users/rizkicahya/alquran_app/assets/images/kompas-2.png
-    - /Users/rizkicahya/alquran_app/assets/images/arrow.png
+    - /Users/rizkicahya/alquran_app/assets-1/images/Alhamdulillah.png
+    - /Users/rizkicahya/alquran_app/assets-1/images/Allahuakbar.png
+    - /Users/rizkicahya/alquran_app/assets-1/images/Subhanallah.png
+    - /Users/rizkicahya/alquran_app/assets-1/images/Lailahaillallah.png
+    - /Users/rizkicahya/alquran_app/assets-1/images/masjid-2.png
+    - /Users/rizkicahya/alquran_app/assets-1/images/background.png
+    - /Users/rizkicahya/alquran_app/assets-1/logo/kereem-1.png
+    - /Users/rizkicahya/alquran_app/assets-1/images/kompas-2.png
+    - /Users/rizkicahya/alquran_app/assets-1/images/arrow.png
 
-    - /Users/rizkicahya/alquran_app/assets/logo/tasbih.png
-    - /Users/rizkicahya/alquran_app/assets/logo/quran.png
-    - /Users/rizkicahya/alquran_app/assets/logo/quran-iqro.png
+    - /Users/rizkicahya/alquran_app/assets-1/logo/tasbih.png
+    - /Users/rizkicahya/alquran_app/assets-1/logo/quran.png
+    - /Users/rizkicahya/alquran_app/assets-1/logo/quran-iqro.png
 
-    - /Users/rizkicahya/alquran_app/assets/profile/profile_cat.png
-    - /Users/rizkicahya/alquran_app/assets/profile/profile_dog.png
-    - /Users/rizkicahya/alquran_app/assets/profile/profile_goat.png
+    - /Users/rizkicahya/alquran_app/assets-1/profile/profile_cat.png
+    - /Users/rizkicahya/alquran_app/assets-1/profile/profile_dog.png
+    - /Users/rizkicahya/alquran_app/assets-1/profile/profile_goat.png
 
     - assets/cityOfIndonesia.json
 
-
+    - .env
 
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/kereem.png"  # Path logo aplikasi
+  image_path: "assets/images/kereem.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/images/kereem.png"
+
