--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,9 @@ dependencies:
   flutter_dotenv: ^5.2.1
   flutter_secure_storage:
   webview_flutter: ^4.10.0
-  webview_flutter_android: ^4.1.0
-  webview_flutter_wkwebview: ^3.16.2
+  youtube_player_flutter: ^9.1.1
+  # webview_flutter_android: ^4.1.0
+  # webview_flutter_wkwebview: ^3.16.2
   # flutter_compass: '^0.8.1'
 
 
